<resources>
    <string name="app_name" translatable="false">Stocked</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Stocked</string>
    <string name="nav_header_subtitle" translatable="false">stocked@support.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_scanner">Scanner</string>
    <string name="menu_add">Add product</string>
    <string name="menu_inv">Inventory</string>
    <string name="menu_status">Status</string>

    <string name="qr_msg">Scan a QR Code or a Barcode</string>
    <string name="cam_perm">This app needs to access the camera to work properly</string>
    <string name="cam_perm_granted">Permission granted</string>
    <string name="canceled_scan">The scan has been canceled</string>

    <string name="server_ip">Server IP</string>
    <string name="server_port">Server Port</string>
    <string name="loading_msg">Loading…</string>

    <string name="login" translatable="false">Login</string>
    <string name="username">Username</string>
    <string name="psw" translatable="false">Password</string>
    <string name="execute_login">Login with your credentials</string>
    <string name="prd_code">Product Code</string>
    <string name="prd_name">Product Name</string>
    <string name="prd_quantity">Quantity</string>
    <string name="check">Check Connection</string>
    <string name="prd_add">Add</string>
    <string name="prd_remove">Remove</string>
    <string name="send">Send</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not connected, reconnecting…</string>
    <string name="dest_unreachable">Destination unreachable</string>
    <string name="wrong_credentials">Incorrect username or password</string>
    <string name="cant_connect">Unable to connect</string>
    <string name="missing_ip">Missing IP address</string>
    <string name="missing_port">Missing server port</string>
    <string name="invalid_quantity">Missing or incorrect quantity</string>
    <string name="exceeding_quantity_removal">The quantity you are tempting to remove exceeds the amount of items available</string>
    <string name="executed_operation">Operation executed succesfully</string>
    <string name="unknown_err">Unknown error</string>
    <string name="no_server_response">The server hasn\'t replied in time</string>
    <string name="not_found">Not found</string>
    <string name="to">to</string>
    <string name="not_scanned">Not scanned</string>
    <string name="missing_prd_name">Missing product name</string>
    <string name="already_existing_prd_name">The inserted product name already exists</string>
    <string name="already_existing_prd_code">The inserted product code already exists</string>
    <string name="rejected_operation">The operation got rejected</string>
    <string name="missing_prd_code">Missing product code</string>
    <string name="not_found_add_new_prd">Add a non-existing product via the dedicated section</string>
    <string name="logout" translatable="false">Logout</string>
</resources>