<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    app:itemTextAppearance="@style/ProductSans">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_round_add_circle_outline_24"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_round_qr_code_scanner_24"
            android:title="@string/menu_scanner" />
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_round_autorenew_24"
            android:title="@string/menu_status" />
    </group>
</menu>