<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inventory">

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.stocked.ui.gallery.GalleryFragment"
        android:label="@string/menu_inv"
        tools:layout="@layout/fragment_inv" />

    <fragment
        android:id="@+id/nav_scanner"
        android:name="com.stocked.ui.home.HomeFragment"
        android:label="@string/menu_scanner"
        tools:layout="@layout/fragment_scanner" />


    <fragment
        android:id="@+id/nav_status"
        android:name="com.stocked.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_status"
        tools:layout="@layout/fragment_status" />
</navigation>